<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/mom_detail_scroll_padding">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_title"
            android:textSize="@dimen/mom_detail_title_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="@dimen/mom_detail_margin_top" />

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:layout_marginTop="@dimen/mom_detail_margin_top" />

        <TextView
            android:id="@+id/tv_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_unread"
            android:layout_marginTop="@dimen/mom_detail_margin_top" />

        <Button
            android:id="@+id/btn_convert_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_voice_to_text"
            android:layout_marginTop="@dimen/mom_detail_button_margin_top" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_marginTop="@dimen/mom_detail_button_margin_top_small" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginTop="@dimen/mom_detail_button_margin_top_small" />

        <Button
            android:id="@+id/btn_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_to_word"
            android:layout_marginTop="@dimen/mom_detail_button_margin_top_small" />

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textSize="@dimen/mom_detail_section_text_size"
            android:layout_marginTop="@dimen/mom_detail_section_margin_top" />

        <TextView
            android:id="@+id/tv_action_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_points"
            android:textSize="@dimen/mom_detail_section_text_size"
            android:layout_marginTop="@dimen/mom_detail_section_margin_top_small" />

        <TextView
            android:id="@+id/tv_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minutes_of_meeting"
            android:textSize="@dimen/mom_detail_section_text_size"
            android:layout_marginTop="@dimen/mom_detail_section_margin_top_small" />
    </LinearLayout>
</ScrollView>
