<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/list_item_tag_note_padding"
    android:background="@color/list_item_tag_note_bg">

    <TextView
        android:id="@+id/note_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_date_sample"
        android:textColor="@color/list_item_tag_note_text"
        android:textSize="@dimen/list_item_tag_note_date_text_size" />

    <TextView
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_notes"
        android:textColor="@color/list_item_tag_note_text"
        android:textStyle="bold"
        android:textSize="@dimen/list_item_tag_note_title_text_size"
        android:layout_marginTop="@dimen/list_item_tag_note_title_margin_top" />

    <TextView
        android:id="@+id/note_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_projectx"
        android:textColor="@color/list_item_tag_note_text"
        android:textSize="@dimen/list_item_tag_note_tags_text_size"
        android:layout_marginTop="@dimen/list_item_tag_note_tags_margin_top" />

</LinearLayout>
